--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,8 @@ Metrics/BlockLength:
 
 Style/Documentation:
   Enabled: false
+Style/ClassVars:
+  Enabled: false
 Style/GlobalVars:
   Enabled: false
 Style/ClassAndModuleChildren:
